# Jetson-and-NXP-Workspace

./: .gitattributes  .gitignore  README.md
Autoware-tool-subscriber_GPU/Autoware-tool-subscriber/: README.md  pre_installation.sh
Autoware-tool-subscriber_GPU/Autoware-tool-subscriber/src/autoware_auto_msgs/: DISCLAIMER.md  LICENSE  README.md
Autoware-tool-subscriber_GPU/Autoware-tool-subscriber/src/autoware_auto_msgs/autoware_auto_control_msgs/: CMakeLists.txt
Autoware-tool-subscriber_GPU/Autoware-tool-subscriber/src/autoware_subscriber/: CMakeLists.txt  package.xml
ICSimulator-and-QtDashBoard_demo/: CMakeLists.txt  README.md  start_up.sh  udp_start_up.sh
ICSimulator-and-QtDashBoard_demo/Dashboard/: CMakeLists.txt  CMakeLists.txt.user.c3d3acf
ICSimulator-and-QtDashBoard_demo/Dashboard/resources/qml/: BACKUP.15  BACKUP_FIRST  TachometerStyle.qml  ValueSource.qml  dashboard.qml  dummyqml.2  experminet
ICSimulator-and-QtDashBoard_demo/Dashboard/src/: CanReceiver.cpp  CanReceiver.h  FlexrayReceiver.cpp  FlexrayReceiver.h  LinReceiver.cpp  LinReceiver.h  TcpSignalReceiver.cpp  TcpSignalReceiver.h  UdpReceiver.cpp  UdpReceiver.h  main.cpp
ICSimulator-and-QtDashBoard_demo/Dashboard/src/log/: latest_list
ICSimulator-and-QtDashBoard_demo/ICSimulator/: CMakeLists.txt
ICSimulator-and-QtDashBoard_demo/ICSimulator/include/: ICSimulator.hpp  UDPSimulator.hpp
ICSimulator-and-QtDashBoard_demo/ICSimulator/src/: Dummy_Sender.cpp  ICSimulator.cpp  Sender.cpp  UDPSimulator.cpp
NXP_project_setup_document/: .~lock.AUTOWARE_SUBSCRIBER_GPU_SERVER.odt#  .~lock.COMBINED_DOCUMENT_FOR_NXP_BOARD1_AND_BOARD2.odt#  .~lock.Flashing_Guide_for_NXP_S32G3_Board.odt#  .~lock.Qt_Build_Jetson.odt#  .~lock.TEST_METHOD.odt#  .~lock.ttcn.odt#  AUTOWARE_SUBSCRIBER_GPU_SERVER.odt  Building_Document_for_EB_Tresos.odt  Building_Document_for_S32_DS_blob_bin.odt  DEBUGGING Setup.odt  Flashing_Guide_for_NXP_S32G3_Board.odt  Hardware_Setup.odt  Qt_Build_Jetson.odt  TEST_METHOD.odt  Tools_Used.odt  ttcn.odt
board1/: b1_run_ipc.sh  bl2_w_dtb.s32-sdcard  ipc-app.service
board2/: b2_run_ipc.sh  ipc-launch.service
(+235 files in other folders)
